Refactor chat application for streaming support and WebSocket integration
- Updated ChatService to handle async generators for streaming responses.
- Enhanced process_message and added process_message_stream methods for token streaming.
- Modified ChatApp to manage WebSocket connections and streaming responses.
- Adjusted ChatRenderer to include WebSocket endpoint configuration.
- Introduced PydanticAIStreamingResponder for real-time token streaming from Pydantic AI.
- Removed deprecated render_chat_interface method from ChatRenderer.
- Updated documentation and comments for clarity on streaming functionality.

--- a/nbs/2-Service.ipynb
+++ b/nbs/2-Service.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "bd8433f0",
    "metadata": {},
    "outputs": [],
@@ -125,6 +125,12 @@
     "        self.error_handler = error_handler or DefaultErrorHandler()\n",
     "        self.context_provider = context_provider\n",
     "\n",
+    "    def _is_async_generator(self, obj):\n",
+    "        \"\"\"Check if object is an async generator.\"\"\"\n",
+    "        return inspect.isasyncgenfunction(obj) or (\n",
+    "            hasattr(obj, \"__call__\") and inspect.isasyncgenfunction(obj.__call__)\n",
+    "        )\n",
+    "\n",
     "    async def process_message(\n",
     "        self, user_message: str, session: Optional[ChatSession] = None\n",
     "    ) -> str:\n",
@@ -144,7 +150,15 @@
     "            if self.context_provider and session:\n",
     "                context = self.context_provider(session)\n",
     "\n",
-    "            # Call responder\n",
+    "            # Check if responder is an async generator (streaming)\n",
+    "            if self._is_async_generator(self.responder):\n",
+    "                # For streaming responders, collect all chunks\n",
+    "                chunks = []\n",
+    "                async for chunk in self.responder(user_message, context):\n",
+    "                    chunks.append(str(chunk))\n",
+    "                return \"\".join(chunks)\n",
+    "\n",
+    "            # Non-streaming responder\n",
     "            if inspect.iscoroutinefunction(self.responder):\n",
     "                result = await self.responder(user_message, context)\n",
     "            else:\n",
@@ -156,6 +170,42 @@
     "\n",
     "        except Exception as e:\n",
     "            return self.error_handler(e, user_message)\n",
+    "\n",
+    "    async def process_message_stream(\n",
+    "        self, user_message: str, session: Optional[ChatSession] = None\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        Process a user message and stream the response token by token.\n",
+    "\n",
+    "        Args:\n",
+    "            user_message: The user's input message\n",
+    "            session: Optional chat session for context\n",
+    "\n",
+    "        Yields:\n",
+    "            Response chunks as they are generated\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            # Extract context if provider exists\n",
+    "            context = None\n",
+    "            if self.context_provider and session:\n",
+    "                context = self.context_provider(session)\n",
+    "\n",
+    "            # Check if responder supports streaming\n",
+    "            if self._is_async_generator(self.responder):\n",
+    "                async for chunk in self.responder(user_message, context):\n",
+    "                    yield str(chunk)\n",
+    "            else:\n",
+    "                # Non-streaming responder - yield full response\n",
+    "                if inspect.iscoroutinefunction(self.responder):\n",
+    "                    result = await self.responder(user_message, context)\n",
+    "                else:\n",
+    "                    result = self.responder(user_message, context)\n",
+    "                    if inspect.isawaitable(result):\n",
+    "                        result = await result\n",
+    "                yield str(result)\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            yield self.error_handler(e, user_message)\n",
     "\n",
     "    async def process_session_message(\n",
     "        self, session: ChatSession, user_message: str, add_to_session: bool = True\n",
