--- a/nbs/3-Renderer.ipynb
+++ b/nbs/3-Renderer.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c51761f7",
    "metadata": {},
    "outputs": [],
@@ -56,6 +56,7 @@
     "        input_placeholder: str = \"Type a message...\",\n",
     "        input_style: Optional[str] = None,\n",
     "        chat_container_style: Optional[str] = None,\n",
+    "        ws_endpoint: str = \"/ws\",\n",
     "    ):\n",
     "        \"\"\"\n",
     "        Initialize ChatRenderer.\n",
@@ -65,9 +66,11 @@
     "            input_placeholder: Placeholder text for input field\n",
     "            input_style: Custom CSS style for input field\n",
     "            chat_container_style: Custom CSS style for chat container\n",
+    "            ws_endpoint: WebSocket endpoint path\n",
     "        \"\"\"\n",
     "        self.card = card or ChatCard()\n",
     "        self.input_placeholder = input_placeholder\n",
+    "        self.ws_endpoint = ws_endpoint\n",
     "        self.input_style = input_style or (\n",
     "            \"width: 60%; max-width: 600px; padding: 0.75em; \"\n",
     "            \"font-size: 1em; border-radius: 0.5em\"\n",
@@ -135,7 +138,7 @@
     "        ws_send: bool = True,\n",
     "    ) -> Any:\n",
     "        \"\"\"\n",
-    "        Render the input form with styling.\n",
+    "        Render the input form with WebSocket connection.\n",
     "\n",
     "        Args:\n",
     "            form_id: HTML ID for the form\n",
@@ -153,36 +156,10 @@
     "        return Form(\n",
     "            self.render_input(),\n",
     "            id=form_id,\n",
+    "            hx_ext=\"ws\",\n",
+    "            ws_connect=self.ws_endpoint,\n",
     "            ws_send=ws_send,\n",
     "            style=form_style,\n",
-    "        )\n",
-    "\n",
-    "    def render_chat_interface(\n",
-    "        self,\n",
-    "        messages: List[Message],\n",
-    "        title: str = \"Chat\",\n",
-    "        header_style: Optional[str] = None,\n",
-    "        container_style: Optional[str] = None,\n",
-    "    ) -> Any:\n",
-    "        \"\"\"\n",
-    "        Render complete chat interface with messages and input.\n",
-    "\n",
-    "        Args:\n",
-    "            messages: List of messages to display\n",
-    "            title: Chat title/header\n",
-    "            header_style: Custom style for header\n",
-    "            container_style: Custom style for main container\n",
-    "\n",
-    "        Returns:\n",
-    "            FastHTML Div with complete chat interface\n",
-    "        \"\"\"\n",
-    "        header_style = header_style or \"text-align: center; padding: 1em;\"\n",
-    "\n",
-    "        return Div(\n",
-    "            H1(title, style=header_style),\n",
-    "            self.render_messages(messages),\n",
-    "            self.render_form(),\n",
-    "            style=container_style,\n",
     "        )"
    ]
   },
