--- a/nbs/4-ChatApp.ipynb
+++ b/nbs/4-ChatApp.ipynb
@@ -127,15 +127,7 @@
     "\n",
     "\n",
     "class ChatApp:\n",
-    "    \"\"\"\n",
-    "    Complete chat application with full dependency injection.\n",
-    "\n",
-    "    This is the main orchestration layer that ties together:\n",
-    "    - Session management (state)\n",
-    "    - Chat service (business logic)\n",
-    "    - Renderer (presentation)\n",
-    "    - FastHTML + WebSocket (infrastructure)\n",
-    "    \"\"\"\n",
+    "    \"\"\"Main chat application composing all components.\"\"\"\n",
     "\n",
     "    def __init__(\n",
     "        self,\n",
@@ -145,7 +137,7 @@
     "        config: Optional[ChatAppConfig] = None,\n",
     "    ):\n",
     "        \"\"\"\n",
-    "        Initialize ChatApp with injected dependencies.\n",
+    "        Initialize ChatApp with dependency injection.\n",
     "\n",
     "        Args:\n",
     "            session_manager: Manages chat sessions\n",
@@ -204,12 +196,11 @@
     "                    H1(self.config.app_title, style=self.config.header_style),\n",
     "                    self.renderer.render_messages(initial_messages),\n",
     "                    self.renderer.render_form(),\n",
-    "                    hx_ext=\"ws\",\n",
-    "                    ws_connect=self.config.ws_endpoint,\n",
     "                    style=container_style,\n",
     "                ),\n",
     "            )\n",
     "\n",
+    "        # Register WebSocket route with message handler\n",
     "        @self.app.ws(\n",
     "            self.config.ws_endpoint, conn=self._on_connect, disconn=self._on_disconnect\n",
     "        )\n",
@@ -232,12 +223,11 @@
     "\n",
     "    async def _handle_websocket_message(self, msg: str, send, ws):\n",
     "        \"\"\"\n",
-    "        Handle incoming WebSocket message with full lifecycle:\n",
+    "        Handle incoming WebSocket message with streaming support:\n",
     "        1. Add user message\n",
-    "        2. Show pending assistant message with spinner\n",
-    "        3. Process with chat service\n",
-    "        4. Update with actual response\n",
-    "        5. Clear input\n",
+    "        2. Add empty assistant message for streaming\n",
+    "        3. Stream response tokens and update message progressively\n",
+    "        4. Clear input\n",
     "        \"\"\"\n",
     "        session_id = str(id(ws))\n",
     "        session = self.session_manager.get_session(session_id)\n",
@@ -253,21 +243,32 @@
     "        session.add_message(\"User\", msg)\n",
     "        await send(self.renderer.render_messages(session.get_messages()))\n",
     "\n",
-    "        # Step 2: Add pending assistant message with spinner\n",
-    "        pending_msg = session.add_message(\"Assistant\", \"\", pending=True)\n",
-    "        await send(self.renderer.render_messages(session.get_messages()))\n",
+    "        # Step 2: Add empty assistant message for streaming\n",
+    "        assistant_msg = session.add_message(\"Assistant\", \"\", pending=False)\n",
     "\n",
-    "        # Step 3: Process message with chat service\n",
+    "        # Step 3: Stream response and update progressively\n",
     "        try:\n",
-    "            response = await self.chat_service.process_message(msg, session)\n",
+    "            response_chunks = []\n",
+    "            chunk_count = 0\n",
+    "            async for chunk in self.chat_service.process_message_stream(msg, session):\n",
+    "                response_chunks.append(chunk)\n",
+    "                chunk_count += 1\n",
+    "                # Update the assistant message with accumulated response\n",
+    "                full_response = \"\".join(response_chunks)\n",
+    "                session.update_message(\n",
+    "                    assistant_msg.id, content=full_response, pending=False\n",
+    "                )\n",
+    "                # Send updated message list to UI\n",
+    "                print(f\"📤 Sending chunk #{chunk_count}: {repr(chunk)}\")  # Debug\n",
+    "                await send(self.renderer.render_messages(session.get_messages()))\n",
+    "\n",
     "        except Exception as e:\n",
-    "            response = f\"Error: {str(e)}\"\n",
+    "            # Handle errors\n",
+    "            error_msg = f\"Error: {str(e)}\"\n",
+    "            session.update_message(assistant_msg.id, content=error_msg, pending=False)\n",
+    "            await send(self.renderer.render_messages(session.get_messages()))\n",
     "\n",
-    "        # Step 4: Update pending message with actual response\n",
-    "        session.update_message(pending_msg.id, content=response, pending=False)\n",
-    "        await send(self.renderer.render_messages(session.get_messages()))\n",
-    "\n",
-    "        # Step 5: Clear input field\n",
+    "        # Step 4: Clear input field\n",
     "        await send(self.renderer.render_input())\n",
     "\n",
     "    def run(\n",
