--- a/_proc/0-Card.ipynb
+++ b/_proc/0-Card.ipynb
@@ -46,7 +46,7 @@
        "\n",
        "### ChatCard\n",
        "\n",
-       ">      ChatCard (user_color:str='#130044', assistant_color:str='#004539',\n",
+       ">      ChatCard (user_color:str='#1C0069', assistant_color:str='#004539',\n",
        ">                user_emoji:str='🗣️', assistant_emoji:str='🕵️\\u200d♂️',\n",
        ">                width:str='60%', font_size:str='1.5em', padding:str='1.25em',\n",
        ">                border_radius:str='1em', user_align:str='right',\n",
@@ -63,7 +63,7 @@
        "\n",
        "### ChatCard\n",
        "\n",
-       ">      ChatCard (user_color:str='#130044', assistant_color:str='#004539',\n",
+       ">      ChatCard (user_color:str='#1C0069', assistant_color:str='#004539',\n",
        ">                user_emoji:str='🗣️', assistant_emoji:str='🕵️\\u200d♂️',\n",
        ">                width:str='60%', font_size:str='1.5em', padding:str='1.25em',\n",
        ">                border_radius:str='1em', user_align:str='right',\n",
