--- a/_proc/4-ChatApp.ipynb
+++ b/_proc/4-ChatApp.ipynb
@@ -105,13 +105,7 @@
        ">               renderer:pylogue.renderer.ChatRenderer,\n",
        ">               config:Optional[__main__.ChatAppConfig]=None)\n",
        "\n",
-       "*Complete chat application with full dependency injection.\n",
-       "\n",
-       "This is the main orchestration layer that ties together:\n",
-       "- Session management (state)\n",
-       "- Chat service (business logic)\n",
-       "- Renderer (presentation)\n",
-       "- FastHTML + WebSocket (infrastructure)*"
+       "*Main chat application composing all components.*"
       ],
       "text/plain": [
        "---\n",
@@ -123,13 +117,7 @@
        ">               renderer:pylogue.renderer.ChatRenderer,\n",
        ">               config:Optional[__main__.ChatAppConfig]=None)\n",
        "\n",
-       "*Complete chat application with full dependency injection.\n",
-       "\n",
-       "This is the main orchestration layer that ties together:\n",
-       "- Session management (state)\n",
-       "- Chat service (business logic)\n",
-       "- Renderer (presentation)\n",
-       "- FastHTML + WebSocket (infrastructure)*"
+       "*Main chat application composing all components.*"
       ]
      },
      "execution_count": null,
@@ -463,19 +451,31 @@
       "text/markdown": [
        "<div>\n",
        "  <div id=\"chat-cards\" class=\"chat-cards\" style=\"display: flex; flex-direction: column; gap: 10px;\">\n",
-       "    <div style=\"background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
+       "    <div style=\"\n",
+       "        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        width: 60%; align-self: center; \n",
+       "        text-align: right; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello!</div>\n",
        "    </div>\n",
-       "    <div style=\"background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em\">\n",
+       "    <div style=\"\n",
+       "        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        width: 60%; align-self: center; \n",
+       "        text-align: left; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hi there! How can I help?</div>\n",
        "    </div>\n",
-       "    <div style=\"background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em\">\n",
+       "    <div style=\"\n",
+       "        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        width: 60%; align-self: center; \n",
+       "        text-align: left; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "🕵️‍♂️ Assistant: <span class=\"spinner\"></span>    </div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello!',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hi there! How can I help?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em'}), div(('🕵️\\u200d♂️ Assistant: ', span((),{'class': 'spinner'})),{'style': 'background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
+       "div((div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello!',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        width: 60%; align-self: center; \\n        text-align: right; border-radius: 1em; \\n        padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hi there! How can I help?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        width: 60%; align-self: center; \\n        text-align: left; border-radius: 1em; \\n        padding: 1.25em'}), div(('🕵️\\u200d♂️ Assistant: ', span((),{'class': 'spinner'})),{'style': '\\n        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        width: 60%; align-self: center; \\n        text-align: left; border-radius: 1em; \\n        padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
       ]
      },
      "execution_count": null,
