--- a/_proc/index.ipynb
+++ b/_proc/index.ipynb
@@ -301,15 +301,16 @@
     "## 📖 Next Steps\n",
     "\n",
     "1. Read through the notebooks in order:\n",
-    "   - `2-Session.ipynb` - Understand state management\n",
-    "   - `3-Service.ipynb` - Learn business logic layer\n",
-    "   - `4-Renderer.ipynb` - Explore presentation layer\n",
-    "   - `5-ChatApp.ipynb` - See full integration\n",
-    "   - `6-Examples.ipynb` - Working examples\n",
+    "   - `1-Session.ipynb` - Understand state management\n",
+    "   - `2-Service.ipynb` - Learn business logic layer\n",
+    "   - `3-Renderer.ipynb` - Explore presentation layer\n",
+    "   - `4-ChatApp.ipynb` - See full integration\n",
+    "   - `5-Examples.ipynb` - Working examples\n",
+    "   - `6-JupyterExample.ipynb` - Jupyter integration\n",
     "\n",
-    "2. Try the examples in `6-Examples.ipynb`\n",
+    "2. Try the examples in `5-Examples.ipynb`\n",
     "\n",
-    "3. Build your own custom responder\n",
+    "3. Build your own custom responder and test it out in `6-JupyterExample.ipynb`\n",
     "\n",
     "4. Deploy to production with your preferred hosting"
    ]
