--- a/_proc/3-Renderer.ipynb
+++ b/_proc/3-Renderer.ipynb
@@ -33,7 +33,8 @@
        ">      ChatRenderer (card:Optional[pylogue.cards.ChatCard]=None,\n",
        ">                    input_placeholder:str='Type a message...',\n",
        ">                    input_style:Optional[str]=None,\n",
-       ">                    chat_container_style:Optional[str]=None)\n",
+       ">                    chat_container_style:Optional[str]=None,\n",
+       ">                    ws_endpoint:str='/ws')\n",
        "\n",
        "*Renders chat components with customizable styling.*"
       ],
@@ -45,7 +46,8 @@
        ">      ChatRenderer (card:Optional[pylogue.cards.ChatCard]=None,\n",
        ">                    input_placeholder:str='Type a message...',\n",
        ">                    input_style:Optional[str]=None,\n",
-       ">                    chat_container_style:Optional[str]=None)\n",
+       ">                    chat_container_style:Optional[str]=None,\n",
+       ">                    ws_endpoint:str='/ws')\n",
        "\n",
        "*Renders chat components with customizable styling.*"
       ]
@@ -95,13 +97,17 @@
      "data": {
       "text/markdown": [
        "<div>\n",
-       "  <div style=\"background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
+       "  <div style=\"\n",
+       "        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        width: 60%; align-self: center; \n",
+       "        text-align: right; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>    <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello!</div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello!',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'})"
+       "div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello!',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        width: 60%; align-self: center; \\n        text-align: right; border-radius: 1em; \\n        padding: 1.25em'})"
       ]
      },
      "execution_count": null,
