Refactor ChatApp to use configurable chat endpoint and update example scripts to display chat endpoint URL

--- a/nbs/4-ChatApp.ipynb
+++ b/nbs/4-ChatApp.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "37e4c289",
    "metadata": {},
    "outputs": [],
@@ -73,6 +73,7 @@
     "\n",
     "    # WebSocket settings\n",
     "    ws_endpoint: str = \"/ws\"\n",
+    "    chat_endpoint: str = \"/chat\"\n",
     "\n",
     "    # FastHTML extensions and headers\n",
     "    markdown_enabled: bool = True\n",
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4900d36e",
    "metadata": {},
    "outputs": [],
@@ -180,7 +181,7 @@
     "    def _register_routes(self):\n",
     "        \"\"\"Register HTTP and WebSocket routes.\"\"\"\n",
     "\n",
-    "        @self.app.route(\"/\")\n",
+    "        @self.app.route(self.config.chat_endpoint)\n",
     "        def home():\n",
     "            \"\"\"Main chat interface.\"\"\"\n",
     "            initial_messages = self._get_initial_messages()\n",
